--- a/NetGrossVatApi/Properties/launchSettings.json
+++ b/NetGrossVatApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/vatcalculator?vatRate=0.13&netValue=5",
+      "launchUrl": "api/vatcalculator?vatRate=0.13&netAmount=5",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "NetGrossVatApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/vatcalculator?vatRate=0.13&netValue=5",
+      "launchUrl": "api/vatcalculator?vatRate=0.13&netAmount=5",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
